load more button done

--- a/front-react/public/index.html
+++ b/front-react/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Kamergi audio sono tunisie materiel casque baffle table mixage"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/l71281843_131624141561347_2249621479287160832_n.jpg" />
 
